# DialogueKit

./: .environment.yml  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
dialoguekit/: __init__.py
docs/: Makefile  README.md  components.graffle  concepts.md  evaluation.md  nlu.md  publishing.md  rasa-parrot.md  rasa_component_library.md
main/: .buildinfo  components.html  concepts.html  dialogue_export.html  dialogue_orchestration.html  dialogue_representation.html  evaluation.html  external_agents.html  genindex.html  index.html  installation.html  nlg.html  nlu.html  objects.inv  participant.html  py-modindex.html  search.html  searchindex.js  usage.html
requirements/: docs_requirements.txt  pre_commit.txt  requirements.txt
sample_agents/: __init__.py  mathematics_agent.py  moviebot_agent.py  parrot_agent.py  rasa_parrot_agent.py  woz_agent.py
tests/: __init__.py
v0.0.7/: .buildinfo  components.html  concepts.html  crs.html  dialogue_export.html  external_agents.html  genindex.html  index.html  installation.html  nlg.html  nlu.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
v0.0.8/: .buildinfo  components.html  concepts.html  dialogue_export.html  external_agents.html  genindex.html  index.html  installation.html  nlg.html  nlu.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
v0.0.9.dev0/: .buildinfo  components.html  concepts.html  dialogue_export.html  dialogue_orchestration.html  dialogue_representation.html  (+13 more)
(+1027 files in other folders)
