[project]
name = "dialoguekit"
version = "0.1.0"
authors = [
    { name = "Nolwenn Bernard" },
    { name = "Krisztian Balog" },
    { name = "Jafar Afzali" },
    { name = "Aleksander Drzewiecki" },
    { name = "Shuo Zhang" }
]
description = "Toolkit for building conversational information access systems."
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.3.2",
    "flask-socketio>=5.3.3",
    "Werkzeug>=2.3.3",
    "websockets<11.0",
    "requests>=2.32.5",
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "*.joblib",
    "dialoguekit/nlu/models/satisfaction/*.joblib",
]


[project.urls]
Repository = "https://github.com/iai-group/dialoguekit"
Issues = "https://github.com/iai-group/dialoguekit/issues"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py311']